# lancedb

./: Cargo.toml  README.md
.github/run_tests/: action.yml
.github/workflows/: make-release-commit.yml  npm-publish.yml  python-make-release-commit.yml  python.yml
.github/workflows/build_linux_wheel/: action.yml
.github/workflows/run_tests/: action.yml
.github/workflows/upload_wheel/: action.yml
ci/: build_macos_artifacts_nodejs.sh  build_windows_artifacts_nodejs.ps1
ci/manylinux_nodejs/: build.sh
docs/: README.md  package-lock.json  package.json
docs/src/: ann_indexes.ts  basic.md  basic_legacy.ts  search_legacy.ts  sql_legacy.ts
docs/src/embeddings/: embedding_functions.md
docs/src/guides/: tables.md
docs/src/javascript/: README.md  modules.md
node/: package.json
nodejs/: lancedb-lancedb-0.4.3.tgz  package.json
nodejs/__test__/: table.test.ts
nodejs/examples/js/: index.mjs  package.json
nodejs/examples/js-openai/: index.mjs  package-lock.json  package.json
nodejs/examples/js-transformers/: index.mjs  package-lock.json  package.json
nodejs/examples/js-youtube-transcripts/: index.mjs  package.json
nodejs/lancedb/: index.ts  indexer.ts  native.d.ts  native.js  table.ts
nodejs/src/: connection.rs  table.rs  util.rs
python/: .bumpversion.cfg  ASYNC_MIGRATION.md  Cargo.toml  pyproject.toml
python/python/lancedb/: _lancedb.pyi  index.py  table.py
python/python/tests/: test_db.py  test_fts.py  test_index.py  test_rerankers.py  test_table.py
python/src/: connection.rs  index.rs  lib.rs  table.rs
rust/lancedb/: Cargo.toml
(+54 files in other folders)
